/*
 * $Id: ChangeLog,v 1.4722 2005/12/21 05:15:42 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-12-21 01:28 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    * Exported CreateOleObject() and ReleaseOleObject()
    * Minor correction

2005-12-21 00:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtwin/gtwin.c
    * MT mode is now truly for MSVC only (temporary)
    * reduced cpu idle calls

2005-12-20 01:25 UTC-0300 Walter Negro <anegro-AT-overnet.com.ar>
  * source/vm/errorapi.c
    ! Fix, release idle fence when use TRY or RECOVER

2005-12-20 02:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * bin/bld.bat
    * minor fixup for hbsx under bcc
  * source/rtl/gtwin/gtwin.c
    * for the moment, MT mode is for msvc only!

2005-12-20 14:40 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/win32prn.prg
    ! HB_FUNC_STATIC( SETDOCUMENTPROPERTIES )
      comment out all pDevMode->dmFields = pDevMode->dmFields || DM_XXXXXX ;

2005-12-19 21:30 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
  + source/ct/misc2.c
    + added COMPLEMENT(), NUL() functions
  + source/ct/misc3.c
    + added KBDSTAT() function
  * source/ct/Makefile
  * makefile.bc
  * makefile.dc
  * makefile.gc
  * makefile.pc
  * makefile.vc
  * makefile.wc
  * hrbdll.bc
  * hrbdll.dc
  * hrbdll.gc
  * hrbdll.pc
  * hrbdll.vc
  * hrbdll.wc
    * updated for new ct modules

2005-12-18 19:08 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rdd/dbf1.c
  * source/rdd/workarea.c
    - Reverted "A" autoincrement field type. It had some incompatibilities.

2005-12-18 18:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtwin/gtwin.c
    * moved alt-numpad handling to a seperate function.  This will allow
      the ability to turn this compatible handling off if you desire.